--- a/Final/Final/Views/Shared/_Layout.cshtml
+++ b/Final/Final/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top mb-2">
+    <nav class="navbar navbar-expand-sm navbar-dark  fixed-top mb-2">
     <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -19,9 +19,7 @@
         <div class="navbar-collapse collapse" id="navbarSupportedContent">
 
             <ul class="nav navbar-nav mr-auto">
-                <li class="nav-item">@Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "nav-link" })</li>
-                <li class="nav-item">@Html.ActionLink("Recetas", "Index", "recetas", null, new { @class = "nav-link" })</li>
-                <li class="nav-item">@Html.ActionLink("Usuarios", "Index", "usuarios", null, new { @class = "nav-link" })</li>
+                <li class="nav-item"  style="float:left">@Html.ActionLink("Desconectar", "Login", "Login", null, new { @class = "nav-link" })</li>
             </ul>
 
         </div>
