--- a/Final/Final/Views/Doctors/Index.cshtml
+++ b/Final/Final/Views/Doctors/Index.cshtml
@@ -14,7 +14,50 @@
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
 <body>
+    <div class="jumbotron bg-dark text-light bg-success">
+        <h1 class="display-4 text-center">Doctor</h1>
+    </div>
+    <div class="card-group">
+        <div class="card bg-light">
+            <img class="card-img-top" src="~/images/vicitas.png" alt="Vicitas" />
+            <div class="card-body">
+                <h5 class="card-title text-center">Vicitas</h5>
+            </div>
+        </div>
+        <div class="card bg-light">
+            <img class="card-img-top" src="~/images/consultas.png" alt="Consultas">
+            <div class="card-body">
+                <h5 class="card-title text-center">Consultas</h5>
+            </div>
+        </div>
+        <div class="card bg-light">
+            <img class="card-img-top" src="~/images/citas.png" alt="Citas">
+            <div class="card-body">
+                <h5 class="card-title text-center">Citas</h5>
+            </div>
+        </div>
+    </div>
 
+    <div class="card-group">
+        <div class="card bg-light">
+            <img class="card-img-top" src="~/images/recetas.png" alt="Recetas" />
+            <div class="card-body">
+                <h5 class="card-title text-center">Recetas</h5>
+            </div>
+        </div>
+        <div class="card bg-light">
+            <img class="card-img-top" src="~/images/pacientes.png" alt="Pacientes">
+            <div class="card-body">
+                <h5 class="card-title text-center">Pacientes</h5>
+            </div>
+        </div>
+        <div class="card bg-light">
+            <img class="card-img-top" src="~/images/citas.png" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title text-center">Citas</h5>
+            </div>
+        </div>
+    </div>
     <p>
         @Html.ActionLink("Crear", "Create")
     </p>
