--- a/Final/Final/Views/Shared/_Layout.cshtml
+++ b/Final/Final/Views/Shared/_Layout.cshtml
@@ -10,20 +10,20 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-dark  fixed-top mb-2">
-    <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        @Html.ActionLink("Centro Medico", "", "", new { area = "" }, new { @class = "navbar-brand" })
-        <div class="navbar-collapse collapse" id="navbarSupportedContent">
+    <nav class="navbar navbar-expand-sm navbar-dark fixed-top mb-2">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!--@Html.ActionLink("Centro Medico", "", "", new { area = "" }, new { @class = "navbar-brand" })
+     <div class="navbar-collapse collapse" id="navbarSupportedContent">
 
-            <ul class="nav navbar-nav mr-auto">
-                <li class="nav-item"  style="float:left">@Html.ActionLink("Desconectar", "Login", "Login", null, new { @class = "nav-link" })</li>
-            </ul>
+         <ul class="nav navbar-nav mr-auto">
+             <li class="nav-item"  style="float:left">@Html.ActionLink("Desconectar", "Login", "Login", null, new { @class = "nav-link" })</li>
+         </ul>
 
+     </div>-->
         </div>
-    </div>
 </nav>
 
     <div class="container body-content">
