--- a/Final/Final/Views/Asistentes/Index.cshtml
+++ b/Final/Final/Views/Asistentes/Index.cshtml
@@ -17,13 +17,13 @@
 <body>
     <br />
     <div class="jumbotron bg-dark text-light bg-success">
-        <h1 class="display-4 text-center">Doctor</h1>
+        <h1 class="display-4 text-center">Asistente</h1>
     </div>
     <div class="card-group">
         <div class="card bg-light">
-            <img class="card-img-top" src="~/images/vicitas.png" alt="Vicitas " />
+            <img class="card-img-top" src="~/images/vicitas.png" alt="Agregar Paciente" />
             <div class="card-body">
-                <h5 class="card-title text-center">@Html.ActionLink("Visitas", "Index", "Visitas")</h5>
+                <h5 class="card-title text-center">@Html.ActionLink("agregarpaciente", "Index", "Visitas")</h5>
             </div>
         </div>
         <div class="card bg-light">
@@ -48,9 +48,9 @@
             </div>
         </div>
         <div class="card bg-light">
-            <img class="card-img-top" src="~/images/pacientes.png" alt="Pacientes">
+            <img class="card-img-top" src="https://www.ftacv.org/wp-content/uploads/2017/07/calendario.png" alt="Calendario">
             <div class="card-body">
-                <h5 class="card-title text-center">@Html.ActionLink("Pacientes", "Index", "Pacientes")</h5>
+                <h5 class="card-title text-center">@Html.ActionLink("Calendario", "Index", "Pacientes")</h5>
             </div>
         </div>
         <div class="card bg-light">
