--- a/Final/Final/Views/Asistentes/Index.cshtml
+++ b/Final/Final/Views/Asistentes/Index.cshtml
@@ -21,14 +21,14 @@
     </div>
     <div class="card-group">
         <div class="card bg-light">
-            <img class="card-img-top" src="~/images/vicitas.png" alt="Agregar Paciente" />
+            <img class="card-img-top" src="https://pngimage.net/wp-content/uploads/2018/05/agregar-icono-png-9.png" alt="Agregar Paciente" />
             <div class="card-body">
                 <h5 class="card-title text-center">@Html.ActionLink("agregarpaciente", "Index", "Visitas")</h5>
             </div>
         </div>
         <div class="card bg-light">
             <img class="card-img-top" src="~/images/consultas.png" alt="Consultas">
-            <div class="card-body">
+            <div class="card-body">s
                 <h5 class="card-title text-center">@Html.ActionLink("Consultas", "Index", "Consultas")</h5>
             </div>
         </div>
@@ -42,9 +42,9 @@
 
     <div class="card-group">
         <div class="card bg-light">
-            <img class="card-img-top" src="~/images/recetas.png" alt="Recetas" />
+            <img class="card-img-top" src="https://media.kasperskydaily.com/wp-content/uploads/sites/87/2015/07/05201530/nfc_blog.png" alt="Pagos Consulta" />
             <div class="card-body">
-                <h5 class="card-title text-center">@Html.ActionLink("Recetas", "Index", "Recetas")</h5>
+                <h5 class="card-title text-center">@Html.ActionLink("Pagos", "Index", "Recetas")</h5>
             </div>
         </div>
         <div class="card bg-light">
