--- a/Final/Final/Views/Login/Login.cshtml
+++ b/Final/Final/Views/Login/Login.cshtml
@@ -28,7 +28,7 @@
     <h1>Iniciar Sesion </h1>
     <div class="w3ls-login box box--big">
         <!-- form starts here -->
-        <form action="../Doctors/Index" method="post">
+        <form action="../Admin/Admin" method="post">
             <div class="agile-field-txt">
                 <label>
                     <i class="fa fa-user" aria-hidden="true"></i> Usuario
