--- a/Final/Final/Views/Asistentes/Index.cshtml
+++ b/Final/Final/Views/Asistentes/Index.cshtml
@@ -3,61 +3,65 @@
 @{
     ViewBag.Title = "Index";
 }
-
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.cedula)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.apellido)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.telefono)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.usuario)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.clave)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.cedula)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.apellido)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.telefono)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.usuario)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.clave)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
-        </td>
-    </tr>
-}
-
-</table>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - BM- RM</title>
+    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <script src="~/Scripts/modernizr-2.6.2.js"></script>
+</head>
+<body>
+    @Html.ActionLink("Desconectar", "Login", "Login")
+    <br />
+    <div class="jumbotron bg-dark text-light bg-success">
+        <h1 class="display-4 text-center">Asistente</h1>
+    </div>
+    <div class="card-group">
+        <div class="card bg-light">
+            <img class="card-img-top" src="https://pngimage.net/wp-content/uploads/2018/05/agregar-icono-png-9.png" alt="Agregar Paciente" />
+            <div class="card-body">
+                <h5 class="card-title text-center">@Html.ActionLink("agregarpaciente", "Index", "Visitas")</h5>
+            </div>
+        </div>
+        <div class="card bg-light">
+            <img class="card-img-top" src="~/images/consultas.png" alt="Consultas">
+            <div class="card-body">
+                
+                <h5 class="card-title text-center">@Html.ActionLink("Consultas", "Index", "Consultas")</h5>
+            </div>
+        </div>
+        <div class="card bg-light">
+            <img class="card-img-top" src="~/images/citas.png" alt="Citas">
+            <div class="card-body">
+                <h5 class="card-title text-center">@Html.ActionLink("Citas", "Index", "Citas")</h5>
+            </div>
+        </div>
+    </div>
+    <div class="card-group">
+        <div class="card bg-light">
+            <br /><br />
+            <img class="card-img-top" src="https://media.kasperskydaily.com/wp-content/uploads/sites/87/2015/07/05201530/nfc_blog.png" alt="Pagos Consulta" />
+            <div class="card-body">
+                <h5 class="card-title text-center">@Html.ActionLink("Pagos", "Index", "Recetas")</h5>
+            </div>
+        </div>
+        <div class="card bg-light">
+            <img class="card-img-top" src="https://www.ftacv.org/wp-content/uploads/2017/07/calendario.png" alt="Calendario">
+            <div class="card-body">
+                <h5 class="card-title text-center">@Html.ActionLink("Calendario", "Index", "Pacientes")</h5>
+            </div>
+        </div>
+        <div class="card bg-light">
+            <img class="card-img-top" src="~/images/citas.png" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title text-center">@Html.ActionLink("Citas", "Index", "Citas")</h5>
+            </div>
+        </div>
+    </div>
+    <br /><br />
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+</body>
+</html>
