--- a/Final/Final/Views/LoginAsistente/LoginAsistente.cshtml
+++ b/Final/Final/Views/LoginAsistente/LoginAsistente.cshtml
@@ -29,7 +29,7 @@
     <h1>Iniciar Sesion </h1>
     <div class="w3ls-login box box--big">
         <!-- form starts here -->
-        <form action="../Doctors/Index" method="post">
+        <form action="../Asistentes/Index" method="post">
             <div class="agile-field-txt">
                 <label>
                     <i class="fa fa-user" aria-hidden="true"></i> Usuario
